--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -51,6 +51,10 @@ As a PhD student, I also worked as teaching assistant (helping with grading and 
 
 <br><br>
 
+Information about my most recent teaching (at the TU Berlin) can be found on my research group website: <a href="http://www.embody.group/courses/" target="_blank">www.embody.group/courses/</a> 
+
+<br><br>
+
 
 <h1> Diversity Outreach </h1>
 
