--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -17,7 +17,11 @@ Reflecting my interests and orientation as a researcher, in my teaching I like t
 
 <br>
 <br>
-<br> 
+
+>> Information about my most recent teaching (at the TU Berlin) can be found on my research group website: <a href="http://www.embody.group/courses/" target="_blank">www.embody.group/courses/</a> 
+
+<br><br>
+
 
 <h1> Courses taught (selected): </h1>
 
@@ -48,10 +52,6 @@ As a PhD student, I also worked as teaching assistant (helping with grading and 
   <li>PHIL2024 Science, Magic, and the Occult. (Prof. John McEvoy, Fall 2015)</li>
     
 </ul>
-
-<br><br>
-
-Information about my most recent teaching (at the TU Berlin) can be found on my research group website: <a href="http://www.embody.group/courses/" target="_blank">www.embody.group/courses/</a> 
 
 <br><br>
 
