--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -18,7 +18,7 @@ Reflecting my interests and orientation as a researcher, in my teaching I like t
 <br>
 <br>
 
->> Information about my most recent teaching (at the TU Berlin) can be found on my research group website: <a href="http://www.embody.group/courses/" target="_blank">www.embody.group/courses/</a> 
+>> Information about my most recent teaching (at the TU Berlin) can be found on my research group website: <a href="https://www.embody.group/courses/" target="_blank">www.embody.group/courses/</a> 
 
 <br><br>
 
